@@ -15,6 +15,8 @@ Release - 15.09-2.01beta (Release candidate, cross-platform, based on zip/p7zip 
     * Support for SYM_LINK & HARD_LINK properties
 
     * Improving performance by using GCC 5.3 for Windows builds
+    
+    * Bugfix: Bug #18 (null as password causes JVM crash)
 
 Release - 9.20-2.00beta (Release candidate, cross-platform, based on zip/p7zip 9.20 beta)
 
